@@ -72,6 +72,7 @@ public class CsvEditorSettings implements PersistentStateComponent<CsvEditorSett
         public int TABLE_DEFAULT_COLUMN_WIDTH = TABLE_DEFAULT_COLUMN_WIDTH_DEFAULT;
         public boolean TABLE_AUTO_COLUMN_WIDTH_ON_OPEN = false;
         public boolean ZERO_BASED_COLUMN_NUMBERING = false;
+        public boolean TABLE_HEADER_ROW_FIXED = true;
 
         public boolean SHOW_TABLE_EDITOR_INFO_PANEL = true;
         public boolean QUOTING_ENFORCED = false;
@@ -296,7 +297,19 @@ public class CsvEditorSettings implements PersistentStateComponent<CsvEditorSett
     }
 
     public void setValueColoring(ValueColoring valueColoring) {
+        ValueColoring oldValue = getValueColoring();
         getState().VALUE_COLORING = valueColoring;
+        if (valueColoring != oldValue) {
+            myPropertyChangeSupport.firePropertyChange("valueColoring", oldValue, getValueColoring());
+        }
+    }
+
+    public boolean isHeaderRowFixed() {
+        return getState().TABLE_HEADER_ROW_FIXED;
+    }
+
+    public void setHeaderRowFixed(boolean headerRowFixed) {
+        getState().TABLE_HEADER_ROW_FIXED = headerRowFixed;
     }
 
     public boolean checkCurrentPluginVersion(String actualVersion) {
