@@ -15,6 +15,7 @@
             <li>customizable Table Editor</li>
             <li>customizable text editor</li>
             <li>customizable column coloring</li>
+            <li>customizable line comment</li>
             <li>syntax validation</li>
             <li>syntax highlighting</li>
             <li>content formatting</li>
@@ -49,7 +50,9 @@
 
     <change-notes><![CDATA[
         <pre style="font-family: sans-serif">
+NEW: Added default "Header row fixed" setting (enabled)
 NEW: Support "Comment with line comment" #247
+FIX: "Value coloring" change not applied to open files
       </pre>
     ]]>
     </change-notes>
